RESOLVED FIXED153945
REGRESSION(r196183): [GTK] Broke TestInspector
https://bugs.webkit.org/show_bug.cgi?id=153945
Summary REGRESSION(r196183): [GTK] Broke TestInspector
Michael Catanzaro
Reported 2016-02-06 09:35:07 PST
r196183 broke TestInspector: TEST: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestInspector... (pid=6821) /webkit2/WebKitWebInspector/default: OK /webkit2/WebKitWebInspector/manual-attach-detach: (./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestInspector:6821): Gtk-CRITICAL **: gtk_container_remove: assertion 'gtk_widget_get_parent (widget) == GTK_WIDGET (container) || GTK_IS_ASSISTANT (container) || GTK_IS_ACTION_BAR (container) || GTK_IS_POPOVER_MENU (container)' failed FAIL
Attachments
Patch (2.49 KB, patch)
2016-02-09 03:18 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-02-09 03:18:48 PST
Carlos Garcia Campos
Comment 2 2016-02-09 22:54:06 PST
Note You need to log in before you can comment on or make changes to this bug.